litmask/tests/compile/mask_env_unset_with_custom_message.stderr
error: custom: please run with FOO set
 --> tests/compile/mask_env_unset_with_custom_message.rs:9:9
  |
9 |         "LITMASK_TRYBUILD_DEFINITELY_UNSET_X9Z42",
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
